some changes in mail
